Rebrand: fbvpdf → cbvpdf
- Rename fbvpdf.app to cbvpdf.app
- Rename binary fbvpdf to cbvpdf
- Update all build scripts (makemacos.sh, makelinux.sh, makecrosswin.sh, make-macos-bundle.sh)
- Update source references in platform/gl/gl-main.c
- Update Info.plist files
- Update README and README.md

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 ABOUT
 
-fbvpdf is a specifically crafted version of the MuPDF lightweight open source
+cbvpdf is a specifically crafted version of the MuPDF lightweight open source
 PDF framework to work with electronic schematics.
 
-fbvpdf is not intended to be a general purpose PDF viewer.
+cbvpdf is not intended to be a general purpose PDF viewer.
 
 
 LICENSE
